After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705057 - Overflow errors on 32 bit architecture
Overflow errors on 32 bit architecture
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: introspection
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-29 06:00 UTC by Simon Feltman
Modified: 2013-07-29 06:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Use Python error messages for marshaling integers from Python (24.01 KB, patch)
2013-07-29 06:04 UTC, Simon Feltman
committed Details | Review

Description Simon Feltman 2013-07-29 06:00:18 UTC
The unittest suite currently fails on 32 bit machines with OverflowErrors where ValueErrors are expected.
Comment 1 Simon Feltman 2013-07-29 06:04:05 UTC
Created attachment 250346 [details] [review]
Use Python error messages for marshaling integers from Python

Use Pythons default error messages where possible.
Change all explicitly raised ValueError to use OverflowError
for out of range data.
Comment 2 Martin Pitt 2013-07-29 06:11:48 UTC
Comment on attachment 250346 [details] [review]
Use Python error messages for marshaling integers from Python

LGTM, and verified on 32-bit with python 2.7 and 3.3, and on 64 bit with python 3.3.
Comment 3 Simon Feltman 2013-07-29 06:16:08 UTC
Attachment 250346 [details] pushed as b5dcb18 - Use Python error messages for marshaling integers from Python