Use Python error messages for marshaling integers from Python

Use Pythons default error messages where possible.
Change all explicitly raised ValueError to use OverflowError
for out of range data.

https://bugzilla.gnome.org/show_bug.cgi?id=705057